# Bitcell

./: .env.example  .gitignore  BACKEND_CHECKLIST.md  PROGRESS.md  README.md  jest.config.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/auth/: route.ts
app/api/cells/: route.ts
app/api/cells/[address]/: route.ts
app/api/cells/[address]/deposit/: route.ts
app/api/cells/[address]/settings/: route.ts
app/api/cells/[address]/withdraw/: route.ts
app/api/solana/: route.ts
app/api/transactions/: route.ts
app/app/: page.tsx
bitcell-program/: Cargo.toml
bitcell-program/src/: lib.rs  process_update_settings.rs
bitcell-program/tests/: integration_tests.rs
components/: bitcell-interface.tsx  cell-settings-panel.tsx  cell-statistics-panel.tsx  grid-backdrop.tsx  landing-page.tsx  logo.tsx  theme-provider.tsx  theme-toggle.tsx
components/cell/: cell-controls.tsx  cell.tsx  grid-backdrop.tsx
components/cell/organelles/: heart.tsx  lipid-membrane.tsx  mitochondria.tsx  nucleus.tsx  vacuole.tsx
components/ui/: logo.tsx
context/: demo-context.tsx  wallet-context.tsx
database/: schema.sql
docs/: README.md  api.md  deployment.md  installation.md
docs/api/: README.md
docs/database/: README.md
docs/solana/: README.md
hooks/: use-mobile.tsx
lib/: config.ts  types.ts
services/: solana-service.ts
tests/: api-integration.test.ts  setup.ts  solana-integration.test.ts
