[package]
name = "bitcell-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
